k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test-api
spec:
  selector:
    app: test-api
  ports:
  - port: 80
    targetPort: 3000
